[ADD] agregar detalle producto
Se agrega detalle del producto con recyclerview para las imagenes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">TestMercadoLibre</string>
+    <string name="app_name">MercadoLibre</string>
     <string name="st_init_search">Por favor inicia tu búsqueda</string>
 </resources>
